# ABiWorkflow

./: .editorconfig  .env.example  .ggk_test_output.txt  .gitattributes  .gitignore  .test_async_result.txt  .test_async_result2.txt  .test_full_result.txt  .test_ggk_result.txt  .test_ggk_result2.txt  .test_pipeline_result2.txt  .test_pipeline_result3.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  install.bat  install.sh  run.bat  run.sh  score_plan.bat  test.bat  test.sh  想法.txt
backend/: _tmp_import_test.py  pyproject.toml
backend/app/: clip_status.py  composition_status.py  config.py  database.py  episode_status.py  generation_payload.py  main.py  panel_status.py  progress_payload.py  project_status.py  scene_status.py  task_record_status.py
backend/app/api/: asset_hub.py  assets.py  characters.py  composition.py  costs.py  episodes.py  generation.py  panels.py  project_common.py  project_invalidation.py  project_status.py  projects.py  projects_workflow.py  providers.py  response_utils.py  router.py  scenes.py  script_assets.py  sse.py  system.py  task_mode.py  task_submission.py  tasks.py  websocket.py
backend/app/llm/: anthropic_adapter.py  base.py  factory.py  openai_adapter.py
backend/app/models/: __init__.py  asset_hub.py  character.py  composition_task.py  episode.py  panel.py  project.py  provider_config.py  scene.py  script_asset.py  task_record.py  usage_cost.py  video_clip.py
backend/app/prompts/: narrative_analysis.py  prompt_generation.py
backend/scripts/: cleanup_single_track_schema.py
backend/tests/: conftest.py
frontend/: index.html  (+3 more)
(+257 files in other folders)
